--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,19 +6,20 @@
                   android:required="true" />
     <uses-feature android:name="android.hardware.touchscreen"
                   android:required="false" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Leanback">
+        android:theme="@style/AppTheme">
 
         <activity
             android:name=".TvActivity"
             android:banner="@drawable/app_icon_your_company"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Leanback">
+            android:theme="@style/AppTheme">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
