Modify project stracture

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".TvActivity"
+            android:name=".ui.TvActivity"
             android:banner="@drawable/app_icon_your_company"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
