--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             </intent-filter>
 
         </activity>
+
+        <activity
+            android:name=".ui.SimpleDialogActivity" />
+
     </application>
 
 </manifest>
