--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         <activity
             android:name=".ui.SimpleDialogActivity" />
 
+        <receiver android:name=".receiver.AlarmBroadcastReceiver"/>
+
     </application>
 
 </manifest>
