--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,13 @@
 <manifest package="com.sakebook.android.nexustimer"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-feature android:name="android.software.leanback"
-                  android:required="true" />
-    <uses-feature android:name="android.hardware.touchscreen"
-                  android:required="false" />
+    <uses-feature
+        android:name="android.software.leanback"
+        android:required="true"/>
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false"/>
+
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
@@ -14,25 +17,23 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".ui.TvActivity"
             android:banner="@drawable/app_icon_your_company"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
-
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER"/>
             </intent-filter>
-
         </activity>
-
-        <activity
-            android:name=".ui.SimpleDialogActivity" />
+        <activity android:name=".ui.SimpleDialogActivity"/>
 
         <receiver android:name=".receiver.AlarmBroadcastReceiver"/>
 
+        <activity android:name=".ui.ScheduleCreateStepActivity">
+        </activity>
     </application>
 
 </manifest>
