--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.sakebook.android.nexustimer"
@@ -24,13 +24,24 @@ android {
     }
 }
 
+kapt {
+    generateStubs = true
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    kapt 'com.github.gfx.android.orma:orma-processor:2.4.8'
+    compile 'com.github.gfx.android.orma:orma:2.4.8'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:leanback-v17:23.4.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile(name: 'jobdispatcher-release', ext: 'aar')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
+
 repositories {
+    flatDir {
+        dirs 'libs'
+    }
     mavenCentral()
 }
